--- a/real_life_person/index.html
+++ b/real_life_person/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <title>title</title>
+    <title>Human Needs</title>
+    <h1>A project by Christopher Lalli-Strauss</h1>
+    <h2>Copyright 2025 c </h2>
 </head>
 <body>
     
