--- a/real_life_person/index.html
+++ b/real_life_person/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8" />
     <title>Human Needs</title>
-    <h1>A project by Christopher Lalli-Strauss</h1>
-    <h2>Copyright 2025 c </h2>
 </head>
 <body>
-    
+    <h1>A project by Christopher Lalli-Strauss</h1>
+    <h2>Copyright 2025 c </h2>
+
+    <footer>
+        
+    </footer>
 </body>
 </html>
