--- a/real_life_person/index.html
+++ b/real_life_person/index.html
@@ -7,6 +7,7 @@
 <body>
     <h1>A project by Christopher Lalli-Strauss</h1>
     <h2>Copyright 2025 c </h2>
+    <a href="chalk outline.webp"></a>
 
     <footer>
         
