--- a/real_life_person/index.html
+++ b/real_life_person/index.html
@@ -10,7 +10,7 @@
     <a href="chalk outline.webp"></a>
 
     <footer>
-        
+        <p>Copyright &#169; 2025 Lycan Corporation - All Rights Reserved</p>
     </footer>
 </body>
 </html>
