--- a/real_life_person/index.html
+++ b/real_life_person/index.html
@@ -3,14 +3,18 @@
 <head>
     <meta charset="UTF-8" />
     <title>Human Needs</title>
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
     <h1>A project by Christopher Lalli-Strauss</h1>
     <h2>Copyright &#169; 2025 Lycan Corporation - All Rights Reserved</h2>
     <a href="chalk outline.webp"></a>
 
-    <footer>
+<div id="page-container">
+    <div id="content-wrap">
         <p>Copyright &#169; 2025 Lycan Corporation - All Rights Reserved</p>
-    </footer>
+        </div>
+        <footer id="footer"> <p>Copyright &#169; 2025 Lycan Corporation - All Rights Reserved</footer>
+        </div>
 </body>
 </html>
