--- a/real_life_person/index.html
+++ b/real_life_person/index.html
@@ -7,12 +7,11 @@
 </head>
 <body>
     <h1>A project by Christopher Lalli-Strauss</h1>
-    <h2>Copyright &#169; 2025 Lycan Corporation - All Rights Reserved</h2>
+    <h2>Human Body Checker (change this name)</h2>
     <a href="chalk outline.webp"></a>
 
 <div id="page-container">
     <div id="content-wrap">
-        <p>Copyright &#169; 2025 Lycan Corporation - All Rights Reserved</p>
         </div>
         <footer id="footer"> <p>Copyright &#169; 2025 Lycan Corporation - All Rights Reserved</footer>
         </div>
