Will be prepping full layout tomorrow

--- a/real_life_person/index.html
+++ b/real_life_person/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>A project by Christopher Lalli-Strauss</h1>
     <h2>Human Body Checker (change this name)</h2>
-    <a href="chalk outline.webp"></a>
+    <img src="chalk outline.webp">
 
 <div id="page-container">
     <div id="content-wrap">
