--- a/real_life_person/index.html
+++ b/real_life_person/index.html
@@ -10,7 +10,7 @@
     <h2>Human Body Checker (change this name)</h2>
     <img src="chalk outline.webp">
 
-<div id="page-container">
+<div id="page-container">2
     <div id="content-wrap">
         </div>
         <footer id="footer"> <p>Copyright &#169; 2025 Lycan Corporation - All Rights Reserved</footer>
