--- a/real_life_person/index.html
+++ b/real_life_person/index.html
@@ -6,9 +6,11 @@
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
+    <header>
     <h1>A project by Christopher Lalli-Strauss</h1>
     <h2>Human Body Checker (change this name)</h2>
     <img src="chalk outline.webp">
+    </header>
 
 <div id="page-container">2
     <div id="content-wrap">
