--- a/real_life_person/index.html
+++ b/real_life_person/index.html
@@ -9,7 +9,8 @@
     <header>
     <h1>A project by Christopher Lalli-Strauss</h1>
     <h2>Human Body Checker (change this name)</h2>
-    <img src="chalk outline.webp">
+    <div class = "background_image">
+    <img src="/Users/christopher/Documents/GitHub/real-life-person/Chalk Outline Big.jpg">
     </header>
 
 <div id="page-container">2
