--- a/real_life_person/index.html
+++ b/real_life_person/index.html
@@ -11,6 +11,7 @@
     <h2>Human Body Checker (change this name)</h2>
     <div class = "background_image">
     <img src="/Users/christopher/Documents/GitHub/real-life-person/Chalk Outline Big.jpg">
+    </div>
     </header>
 
 <div id="page-container">2
