--- a/real_life_person/index.html
+++ b/real_life_person/index.html
@@ -6,13 +6,13 @@
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-    <header>
+<div class="title-container">
     <h1>A project by Christopher Lalli-Strauss</h1>
     <h2>Human Body Checker (change this name)</h2>
     <div class = "background_image">
     <img src="/Users/christopher/Documents/GitHub/real-life-person/Chalk Outline Big.jpg">
     </div>
-    </header>
+</div>
 
 <div id="page-container">2
     <div id="content-wrap">
